--- a/contactCard.html
+++ b/contactCard.html
@@ -13,32 +13,27 @@ Create a blank table which has First Name, Last Name, Email and Contact Number a
 
 <head>
   <meta charset="utf-8">
-  <title>Users2
-  </title>
+  <title>Users2</title>
   <script type="text/javascript" src='http://code.jquery.com/jquery-1.10.2.min.js'></script>
 
   <script type="text/javascript">
     $(document).ready(function() {
       $('#user_form').submit(function(event) {
-        // ref to form
         var form = $(this);
 
-        // Below creates and html element
-        var html = '<div class = "user-card"><h1>';
-        html += $('#user_firstname').val() + '</h1>';
-        html += $('#user_lastname').val() + '</h1></<div>';
-        // html += '<td>' + $('#user_email').val() + '</td>';
+        var html = '<div class = "contact-card"><div class="card-front">';
+        html += '<h1>' + $('#user_firstname').val() + '</h1>';
+        html += '<h1>' + $('#user_lastname').val() + '</h2>';
+        html += '</div>';
+        $('.card-container').append(html);
 
-        $('.card-front').append(html);
+        var back = '<div class = "card-back">';
+        back += '<p>' + $('#user_desc').val() + '</p></div></div>';
+        $('.card-back').append(description);
+        // // var back = '<div class = "card-back"><p>'
+        // var description = '<p>' + $('#user_desc').val() + '</p></div></div>';
+        // // var backcard = back + description;
 
-
-
-        var desc = '<p>';
-        desc += $('#user_desc').val() + '</p>';
-        desc += '</div>';
-        $('.card-back').append(html);
-
-        // Below resets form after submitting
         form[0].reset();
 
         event.preventDefault()
@@ -73,8 +68,8 @@ Create a blank table which has First Name, Last Name, Email and Contact Number a
 
     .contact-card {
       display: inline-block;
-
-      height: 300px;
+      border-style: solid;
+      height: auto;
       margin: 10px;
       padding: 10px;
     }
@@ -89,17 +84,16 @@ Create a blank table which has First Name, Last Name, Email and Contact Number a
     }
 
     .card-back {
-      display: none;
+      /*display: none;*/
     }
-
-    .user-card {
+    /*.user-card {
       display: inline-block;
       border-style: solid;
       height: 300px;
       width: 200px;
       padding: 10px;
       margin: 10px;
-    }
+    }*/
 
     .card-container {
       width: 950px;
@@ -117,10 +111,14 @@ Create a blank table which has First Name, Last Name, Email and Contact Number a
 
     <thead>
       <tr>
-        <th>First Name</th>
-        <th>Last Name</th>
-        <!-- <th>Email</th> -->
-        <th>Description</th>
+        <tbody class='card-front'>
+          <th>First Name</th>
+          <th>Last Name</th>
+        </tbody>
+        <tbody class='card-back'>
+          <!-- <th>Email</th> -->
+          <th>Description</th>
+        </tbody>
       </tr>
     </thead>
     <!--
@@ -148,21 +146,12 @@ Create a blank table which has First Name, Last Name, Email and Contact Number a
       <label>First Name:</label>
       <input type="text" id="user_firstname" name="user_firstname" placeholder="First Name">
 
-      <!-- </div>
-
-    <div class="form-group"> -->
 
       <label>Last Name:</label>
       <input type="text" id="user_lastname" name="user_lastname" placeholder="Last Name">
 
     </div>
 
-    <!-- <div class="form-group">
-
-      <label>Email:</label>
-      <input type="email" id="user_email" name="user_email" placeholder="Email">
-
-    </div> -->
 
     <div class="form-group">
 
@@ -178,17 +167,19 @@ Create a blank table which has First Name, Last Name, Email and Contact Number a
     </div>
 
   </form>
+
+  <!-- cards below here -->
   <div class='card-container'>
-    <div class="contact-card">
+    <!-- <div class="contact-card">
       <div class="card-front">
 
       </div>
 
       <div class="card-back">
-        <p>test2</p>
+
       </div>
 
-    </div>
+    </div>-->
   </div>
 
 </body>
