--- a/contactCard.html
+++ b/contactCard.html
@@ -16,6 +16,18 @@ Create a blank table which has First Name, Last Name, Email and Contact Number a
   <title>Users2</title>
   <script type="text/javascript" src='http://code.jquery.com/jquery-1.10.2.min.js'></script>
 
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+
+  <style>
+  .hide {
+    display: none;
+  }
+  </style>
+
   <script type="text/javascript">
 
     $(document).ready(function(){
@@ -24,15 +36,15 @@ Create a blank table which has First Name, Last Name, Email and Contact Number a
 
         var form = $(this);
 
-        var html = '<div class="contact-card">';
-          html += '<div class="card-inner">';
-            html += '<h1>' + $('#user_firstname').val() + '</h1>';
-            html += '<h1>' + $('#user_lastname').val() + '</h2>';
-          html += '</div>';
-          html += '<div class = "card-inner hide"><p>' + $('#user_desc').val() + '</p></div></div>';
+        var html = '<div class="card">';
+        html += '<div class="card-body">'
+        html += '<h4 class="card-title">' + $('#user_firstname').val() + ' ' + $('#user_lastname').val() + '</h4>';
+        html += '<p class="card-text">' + $('#user_desc').val() + '</p>';
+        html += '<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>';
+        html += '</div>';
         html += '</div>';
 
-        $('.card-container').append(html);
+        $('.card-group').append(html);
 
         form[0].reset();
 
@@ -45,141 +57,60 @@ Create a blank table which has First Name, Last Name, Email and Contact Number a
     });
 
     // You must use $(document).on('click','.contact-card',function(){}); for dynamically added content
-    $(document).on('click','.contact-card',function(){
+    $(document).on('click','.card',function(){
 
       var card = $(this);
-
-      card.find('.card-inner').toggle();
 
     });
 
   </script>
 
-  <style>
-    body {
-      width: 950px;
-    }
-
-    label {
-      display: block;
-    }
-
-    .hide {
-      display: none;
-    }
-
-    .form-group {
-      margin-bottom: 7px;
-      width: 300px;
-    }
-
-    .form-group:last-child {
-      margin-bottom: 0;
-    }
-
-    .contact-card {
-      display: inline-block;
-      border-style: solid;
-      vertical-align: top;
-      height: auto;
-      margin: 10px;
-      width: 300px;
-      height: 200px;
-      padding: 10px;
-    }
-
-    .tablesorter {
-      width: 300px;
-      display: none;
-    }
-
-    .card-container {
-      width: 950px;
-      display: inline-block;
-    }
-  </style>
-
-
-
 </head>
 
 <body>
 
-  <table id="myTable" class="tablesorter">
+  <div class="container mt-3">
 
-    <thead>
-      <tr>
-        <tbody class='card-front'>
-          <th>First Name</th>
-          <th>Last Name</th>
-        </tbody>
-        <tbody class='card-back'>
-          <!-- <th>Email</th> -->
-          <th>Description</th>
-        </tbody>
-      </tr>
-    </thead>
-    <!--
-    <div class="users-body">
+    <h1> Add Users </h1>
+    <hr>
 
-      <tr>
-        <td>John</td>
-        <td>Smith</td>
+    <form id="user_form">
 
-        <td>12345678</td>
-      </tr>
+      <div class="form-group">
 
-    </div>
- -->
+        <label>First Name:</label>
+        <input class="form-control form-control-sm" required type="text" id="user_firstname" name="user_firstname" placeholder="First Name">
 
-  </table>
-
-  <h1> Add Users </h1>
-  <hr>
-
-  <form id="user_form">
-
-    <div class="form-group">
-
-      <label>First Name:</label>
-      <input required type="text" id="user_firstname" name="user_firstname" placeholder="First Name">
-
-
-      <label>Last Name:</label>
-      <input required type="text" id="user_lastname" name="user_lastname" placeholder="Last Name">
-
-    </div>
-
-
-    <div class="form-group">
-
-      <label>Description</label>
-      <textarea required rows="6" id="user_desc" name="user_desc" placeholder="Description"></textarea>
-
-    </div>
-
-    <div class="form-group">
-
-      <button id="submit">Submit</button>
-
-    </div>
-
-  </form>
-
-  <!-- cards below here -->
-  <div class='card-container'>
-
-    <!-- <div class="contact-card">
-
-      <div class="card-inner">
-        <h1> Joe <br><br> Schnoe</h1>
       </div>
 
-      <div class="card-inner hide">
-        <p>im just your average guy</p>
+      <div class="form-group">
+
+        <label>Last Name:</label>
+        <input class="form-control form-control-sm" required type="text" id="user_lastname" name="user_lastname" placeholder="Last Name">
+
       </div>
 
-    </div> -->
+
+      <div class="form-group">
+
+        <label>Description:</label>
+        <textarea class="form-control form-control-sm" required rows="6" id="user_desc" name="user_desc" placeholder="Description"></textarea>
+
+      </div>
+
+      <div class="form-group">
+
+        <button id="submit" class="btn btn-secondary btn-sm">Submit</button>
+
+      </div>
+
+    </form>
+
+    <div class="card-group">
+
+
+
+    </div>
 
   </div>
 
